# memory-analysis

./: .gitignore  Cargo.toml  README.md  detailed-design.md  example.md  memory-analysis.sh  preliminary-design.md
src/: cli.rs  local.rs  main.rs
src/analyzer/: mod.rs
src/collector/: mod.rs  types.rs
src/reporter/: mod.rs
src/utils/: mod.rs
test03/: test03.json
