[package]
name = "memory-analysis"
version = "0.1.0"
edition = "2018"

# 依赖项
[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
csv = "1.1"  # 添加 CSV 依赖
rayon = "1.5"  # 添加 Rayon 依赖
chrono = { version = "0.4", features = ["serde"] }  # 添加 Chrono 依赖并启用 serde 特性
tokio = { version = "1", features = ["full"] }  # 添加 Tokio 依赖
clap = { version = "4.0", features = ["derive"] }  # 更新 Clap 依赖到最新版本
byte-unit = "4.0"  # 添加 Byte Unit 依赖
nix = { version = "0.26", features = ["fs"] }  # 添加 nix 依赖用于文件权限操作
regex = "1.5"  # 添加 regex 依赖用于字符串匹配
lazy_static = "1.4"  # 添加 lazy_static 依赖用于静态正则表达式
libc = "0.2"  # 添加 libc 依赖用于获取系统用户信息
